cmake_minimum_required(VERSION 2.8)  
project(Stone)   
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
SET(SRC_LIST main.cpp MainScene.cpp Constraint/Link.cpp Dynamic/ForceGenerator.cpp Dynamic/PhysicsWorld.cpp Body/AABB.cpp Body/Polygon.cpp Body/Circle.cpp Body/Rigidbody.cpp Collision/Contact.cpp Collision/Collision.cpp Math/Vector.cpp Math/Matrix.cpp Common/Tool.cpp Dynamic/Path.cpp)
include_directories(. Math Common Collision Body Constraint Dynamic)
add_executable(main ${SRC_LIST}) 
TARGET_LINK_LIBRARIES(main GLU)
TARGET_LINK_LIBRARIES(main GL)
TARGET_LINK_LIBRARIES(main glut)